<resources>
    <string name="app_name">飞词令</string>
    <string name="login_tv_welcome">欢迎来到飞词令</string>
    <string name="login_tv_know">了解飞词令</string>
    <string name="login_tv_way">推荐登录方式</string>
    <string name="login_tv_may">或</string>
    <string name="login_tv_pwd">密码登录</string>
    <string name="login_tv_explain">登录代表你已同意</string>
    <string name="login_tv_protocol">《飞词令用户协议》</string>
    <string name="main_tv_date">打卡天数</string>
    <string name="main_tv_number">100</string>
    <string name="main_tv_describe_1">新单词数</string>
    <string name="main_tv_describe_2">今日单词</string>
    <string name="main_tv_describe_3">剩余单词</string>
    <string name="main_tv_describe_4">我的单词</string>
    <string name="main_bt_study">开始学习</string>
    <string name="course_tv_main">首页</string>
    <string name="course_tv_my">我的</string>
    <string name="course_tv_hot">热卖</string>
    <string name="course_tv_clinic">训练营</string>
    <string name="course_tv_cet46">四六级</string>
    <string name="discover_tv_room">自习室</string>
    <string name="discover_tv_mate">同桌</string>
    <string name="discover_tv_group">小组</string>
    <string name="discover_tv_shopping">飞词令商城</string>
    <string name="discover_tv_movie">视频</string>
    <string name="mine_tv_name">姓名</string>
    <string name="mine_tv_id">飞词令ID:</string>
    <string name="mine_tv_check">打卡</string>
    <string name="mine_tv_badge">徽章</string>
    <string name="mine_bt_notice">通知</string>
    <string name="action_settings">Settings</string>

</resources>
